# action-python-poetry

./: .flake8  .gitignore  Dockerfile  LICENSE.md  README.md  action.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  test-action.yml
src/action_python_poetry/: __main__.py  constants.py
tests/: test_temp.py
